# aphrodite

./: .gitignore  WORKSPACE
java/libraries/db/: BUILD.bazel  DbConnectionParam.java
java/libraries/db/sql/: BUILD.bazel  Db.java  DbException.java  DbFactory.java
java/libraries/environment/: BUILD.bazel  EnvironmentVariable.java  EnvironmentVariableException.java  EnvironmentVariableUtils.java
java/libraries/func/validatable/: BUILD.bazel  ValidatableFunc.java  ValidationException.java
java/libraries/hibernate/: BUILD.bazel  Hibernate.java  HibernateConfig.java  MySqlHibernateConfig.java
java/libraries/hibernate/resources/: hibernate.cfg.xml
java/libraries/id/: BUILD.bazel  IdUtils.java
java/libraries/validation/: BUILD.bazel  ValidationResult.java  Validator.java  Violation.java  ViolationReason.java
java/system/user/store/: BUILD.bazel  CreateUserFunc.java  CreateUserParam.java  HibernateConfig.java  UserEntity.java  UserStore.java  UserStoreFactory.java
services/aphrodite/: .gitignore  BUILD.bazel  dev.env
services/aphrodite/scripts/: push_image.sh  run_local.sh  setup_and_run_mysql_docker.sh
services/aphrodite/src/main/java/co/hadwen/aphrodite/: Application.java  ControllerConfig.java  Dto.java  GlobalExceptionHandler.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/auth/: AphroditeAuthentication.java  AphroditeAuthenticationDetails.java  AphroditeAuthenticationPrincipal.java  AuthenticationProvider.java  BearerAuthenticationToken.java  BearerAuthenticationTokenFilter.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/env/: EnvConfig.java  EnvironmentVariables.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/exception/: NotFoundException.java  ValidationException.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/exception/dto/: InvalidValueDTO.java  ValidationErrorDTO.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/healthcheck/: HealthCheckConfig.java  HealthCheckController.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/hibernate/: HibernateConfig.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/: PlatformConfig.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/controller/: PlatformController.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/dto/: GetPlatformResponse.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/entity/: PlatformEntity.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/store/: PlatformStore.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/user/: UserConfig.java  UserController.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/user/dto/: CreateUserRequest.java  GetUserResponse.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/user/entity/: UserEntity.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/platform/user/store/: UserStore.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/repository/: UserRepository.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/security/: GlobalExceptionHandler.java  NoRedirectStrategy.java  SecurityConfig.java  WebSecurityConfig.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/security/auth/cognito/: CognitoIdentity.java  CognitoJwtTokenPayload.java  CognitoJwtTokenPayloadParser.java  CognitoUser.java  CognitoUserParser.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/user/: UserConfig.java  UserController.java
services/aphrodite/src/main/java/co/hadwen/aphrodite/user/dto/: CreateUserRequest.java  User.java
services/aphrodite/src/test/java/co/hadwen/aphrodite/auth/: LoginControllerTest.java
services/hera/: .gitignore  BUILD.bazel  deployment.yaml
services/hera/scripts/: list_cloud_proxy_logs.sh  push_image.sh
services/hera/src/main/java/co/hadwen/hera/: Application.java  ControllerConfig.java  Dto.java  GlobalExceptionHandler.java
services/hera/src/main/java/co/hadwen/hera/exception/: NotFoundException.java  ValidationException.java
services/hera/src/main/java/co/hadwen/hera/exception/dto/: InvalidValueDTO.java  ValidationErrorDTO.java
services/hera/src/main/java/co/hadwen/hera/security/: WebSecurityConfig.java
services/hera/src/main/java/co/hadwen/hera/user/: UserController.java
services/hera/src/main/java/co/hadwen/hera/user/dto/: UserDTO.java
services/hera/src/test/java/co/hadwen/hera/auth/: LoginControllerTest.java
