package(default_visibility = ["//visibility:private"])

java_library(
   name = "aphrodite",
   srcs = glob([
       "**/src/main/**/*.java",
   ]),
   resources = [
        "aphrodite-resources"
   ],
   deps = [
       "//:lombok",
       "//java/libraries/environment",
       "//java/libraries/id",
       "//java/libraries/hibernate",
       "@maven//:com_google_code_gson_gson",
       "@maven//:org_apache_commons_commons_lang3",
       "@maven//:org_javassist_javassist",
       "@maven//:org_projectlombok_lombok",
       "@maven//:org_springframework_security_spring_security_core",
       "@maven//:org_springframework_security_spring_security_web",
       "@maven//:org_springframework_boot_spring_boot",
       "@maven//:org_springframework_boot_spring_boot_starter_web",
       "@maven//:org_springframework_boot_spring_boot_autoconfigure",
       "@maven//:org_springframework_boot_spring_boot_starter_security",
       "@maven//:org_springframework_boot_spring_boot_starter_tomcat",
       "@maven//:org_springframework_security_spring_security_config",
       "@maven//:org_apache_tomcat_embed_tomcat_embed_core",
       "@maven//:org_springframework_spring_beans",
       "@maven//:org_springframework_spring_context",
       "@maven//:org_springframework_spring_web",
       "@maven//:org_springframework_spring_webmvc",
       "@maven//:org_hibernate_hibernate_annotations",
       "@maven//:org_hibernate_hibernate_core",
       "@maven//:javax_persistence_javax_persistence_api",
       "@maven//:com_nimbusds_nimbus_jose_jwt"
   ]
)

filegroup(
    name = "aphrodite-resources",
    srcs = glob([
        "src/main/resources/**",
    ]),
)

load("//:junit5.bzl", "java_junit5_test")

# Use java_test after bazel officially support junit5
java_junit5_test(
    name = "aphrodite-test",
    srcs = glob([
            "**/src/test/java/**/*.java",
    ]),
    test_package = "co.hadwen",
    deps = [
       "@maven//:org_springframework_spring_context",
       "@maven//:org_springframework_spring_web",
       "@maven_test//:org_assertj_assertj_core",
       "@maven_test//:org_mockito_mockito_core",
    ],
)

# Java image
load("@io_bazel_rules_docker//java:image.bzl", "java_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

java_image(
    name = "aphrodite_service_image",
    # Put these runfiles into their own layer.
    main_class = "co.hadwen.aphrodite.Application",
    # the source file we need to compile
    srcs = ["src/main/java/co/hadwen/aphrodite/Application.java"],
    deps = [
           "aphrodite",
           "//:lombok",
           "@maven//:com_google_code_gson_gson",
           "@maven//:org_apache_commons_commons_lang3",
           "@maven//:org_javassist_javassist",
           "@maven//:org_projectlombok_lombok",
           "@maven//:org_springframework_boot_spring_boot",
           "@maven//:org_springframework_boot_spring_boot_starter_web",
           "@maven//:org_springframework_boot_spring_boot_autoconfigure",
           "@maven//:org_springframework_spring_context",
           "@maven//:org_springframework_security_spring_security_config",
       ]
)

# Container image
container_image(
    # the name of this target we call in the `k8s_deploy` rule below
    name = "aphrodite_service_container_image",
    # the base image for this image, which is a Bazel target defined above
    # Bazel will call the above target first, and use its output as the
    # base image for this image
    base = ":aphrodite_service_image",
    # expose the 8080 port, which is what our Java app runs on
    ports = ["8080"],
    # The directory in which to expand the base image files
    directory = "/app",
    # Initial working directory when running the image
    workdir = "/app",
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":aphrodite_service_container_image",
    registry = "577184258671.dkr.ecr.us-east-2.amazonaws.com",
    repository = "aphrodite",
    tag="0.0.006"
)